// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabbedContent renders Header properly according to snapshot 1`] = `
<div
  className="tab-header header activeHeader"
  onClick={[Function]}
>
  <input
    checked={true}
    id="4zlbrf"
    readOnly={true}
    type="radio"
  />
  <label
    htmlFor="4zlbrf"
  >
    <span>
      title1
    </span>
  </label>
</div>
`;

exports[`TabbedContent renders Tab properly according to snapshot 1`] = `
<div
  className="tab-content tab visible"
  style={
    Object {
      "color": "blue",
    }
  }
>
  asdasd1
</div>
`;

exports[`TabbedContent renders TabbedContent properly according to snapshot 1`] = `
<div
  className="tabbed-content-component container containerH"
>
  <div
    className="heading headingH"
  >
    <Header
      active={false}
      iconClass="iconclass"
      onClick={[Function]}
      title="title1"
    />
    <Header
      active={true}
      materialIcon="home"
      onClick={[Function]}
      title="title2"
    />
    <Header
      active={false}
      onClick={[Function]}
      title="title3"
    />
  </div>
  <div
    className="content contentH"
  >
    <Tab
      active={false}
      iconClass="iconclass"
      title="title1"
    >
      asdasd1
    </Tab>
    <Tab
      active={true}
      materialIcon="home"
      title="title2"
    >
      asdasd2
    </Tab>
    <Tab
      active={false}
      className="classname"
      title="title3"
    >
      asdasd3
    </Tab>
  </div>
</div>
`;

exports[`TabbedContent renders TabbedContent vertically with radio styles 1`] = `
<div
  className="tabbed-content-component container containerV"
>
  <div
    className="heading headingV"
  >
    <Header
      active={false}
      iconClass="iconclass"
      onClick={[Function]}
      radio={true}
      title="title1"
    />
    <Header
      active={true}
      materialIcon="home"
      onClick={[Function]}
      radio={true}
      title="title2"
    />
    <Header
      active={false}
      onClick={[Function]}
      radio={true}
      title="title3"
    />
  </div>
  <div
    className="content contentV"
  >
    <Tab
      active={false}
      iconClass="iconclass"
      title="title1"
    >
      asdasd1
    </Tab>
    <Tab
      active={true}
      materialIcon="home"
      title="title2"
    >
      asdasd2
    </Tab>
    <Tab
      active={false}
      className="classname"
      title="title3"
    >
      asdasd3
    </Tab>
  </div>
</div>
`;
